--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Build and Release (Manual Run) v1.3
 
 on: 
- workflow_dispatch: # This event allows manual triggering
+ workflow_dispatch: # This event allows manual triggering for build and release
 
 jobs:
   build-and-release:
